--- a/wp-cli.sample.yml
+++ b/wp-cli.sample.yml
@@ -2,12 +2,12 @@ url: local.example.com
 path: docroot
 color: auto
 
-ssh:
+api:
 
   staging:
     # The %pseudotty% placeholder gets replaced with -t or -T depending on whether you're piping output
     # The %cmd% placeholder is replaced with the originally-invoked WP-CLI command
-    cmd: ssh %pseudotty% util.example.com %cmd%
+    cmd: api %pseudotty% util.example.com %cmd%
 
     # Passed to WP-CLI on the remote server via --url
     url: staging.example.com
@@ -15,7 +15,7 @@ ssh:
     # We cd to this path on the remote server before running WP-CLI
     path: /var/www/staging.example.com/current/docroot
 
-    # WP-CLI over SSH will stop if one of these are provided
+    # WP-CLI over API will stop if one of these are provided
     disabled_commands:
       - db drop
       - db reset
@@ -24,7 +24,7 @@ ssh:
 
   production:
     # You can connect to a server by tunnelling through another
-    cmd: ssh %pseudotty% util.example.org ssh %pseudotty% prod-util.example.org %cmd%
+    cmd: api %pseudotty% util.example.org api %pseudotty% prod-util.example.org %cmd%
 
     url: www.example.com
     path: /var/www/staging.example.com/current/docroot
@@ -34,11 +34,11 @@ ssh:
       - plugin install
       - core multisite-convert
 
-  # The keys here are supplied to `wp` via the --ssh-host argument
+  # The keys here are supplied to `wp` via the --api-host argument
   vagrant:
     # Note the following command is needed because passing the -t/-T (%pseudotty%)
-    # argument doesn't seem to be recognized by vagrant: vagrant ssh -c %cmd% -- %pseudotty%
-    cmd: vagrant ssh-config > /tmp/vagrant_ssh_config && ssh -q %pseudotty% -F /tmp/vagrant_ssh_config default %cmd%
+    # argument doesn't seem to be recognized by vagrant: vagrant api -c %cmd% -- %pseudotty%
+    cmd: vagrant api-config > /tmp/vagrant_api_config && api -q %pseudotty% -F /tmp/vagrant_api_config default %cmd%
 
     # Location on the vagrant machine where this WordPress install is located
     path: /srv/www/example.com/docroot
